[package]
name = "forkfs"
version = "0.2.8"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "ForkFS allows you to sandbox a process's changes to your file system."
repository = "https://github.com/SUPERCILEX/forkfs"
keywords = ["tools", "isolate", "files"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging", "filesystem"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
dirs = "5.0.1"
error-stack = { version = "0.5.0", default-features = false, features = ["std"] }
fuc_engine = "2.2.0"
rustix = { version = "0.38.42", features = ["fs", "process", "thread", "linux_latest"] }
thiserror = "2.0.9"

[dev-dependencies]
supercilex-tests = "0.4.12"
trycmd = "0.15.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
strip = false
